<resources>
    <string name="app_name">PatientSignUpForm</string>
    <string name="login_title">Essential App For Everyone\'s Home Health Needs</string>
    <string name="login_subtitle">We connect Doctors, Nurses, Caretakers, Physiotherapists for home visits, book lab tests, deliver medicines at home. Tele-consultation and appointments with doctors are enabled making health you reach best!</string>
    <string name="phone_number">Enter your Phone number</string>
    <string name="phone_number_hint">Enter Phone number</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">Create your account</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="email">E-Mail</string>
    <string name="address">Address</string>
    <string name="pinCode">Pincode</string>
    <string name="current_location">Use my current location</string>
    <string name="agreement">I Agree to the terms and conditions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dialog_message">Demo Message></string>
    <string name="dialog_title">Demo Title</string>
    <string name="logIn">Log In</string>
</resources>