<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10"
    tools:context=".views.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_25"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_22"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_22"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_22"
        android:gravity="center"
        android:text="@string/login_subtitle"
        android:textColor="@color/light_black"
        android:textSize="@dimen/dimen_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginRight="@dimen/dimen_25"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/btn_secondary"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15">



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@drawable/btn_primary"
        android:text="Log In"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>